# CUDA_Freshman

basic/6_sum_matrix/: sum_matrix.cu
optix/: CMakeLists.txt
optix/example01_helloOptix/: CMakeLists.txt  main.cpp  optix8.h
optix/example02_pipelineAndRayGen/: CUDABuffer.h  SampleRenderer.cpp  SampleRenderer.h  devicePrograms.cu
